charts/proxy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
